locale update; integrate in nightly build

--- a/locale/messages_de.properties
+++ b/locale/messages_de.properties
@@ -46,6 +46,16 @@ tmm.donate=Spenden
 tmm.searchfield=Suchen...
 tmm.errorlogs=Zeige Fehlerbericht
 tmm.wakeonlandevice=Wake on LAN Gerät
+# tmm.wakeonlan=Wake on LAN
+# tmm.version=Version
+# tmm.builddate=Build date
+# tmm.homepage=Homepage
+# tmm.thanksto=Thanks to
+# tmm.of=of
+# tmm.nfo=NFO
+# tmm.images=Images
+# tmm.trailer=Trailer
+# tmm.subtitles=Subtitles
 
 status.activethreads=laufende Aufgaben
 status.queuesize=Warteschlange\:
@@ -84,13 +94,18 @@ movie.export=Exportiere Filmliste(n) von selektierten Filmen
 
 movie.edit=Film bearbeiten
 movie.edit.abortqueue.desc=Alle Filmänderungen abbrechen
+movie.edit.moveactorup=ausgewählten Darsteller nach oben verschieben
+movie.edit.moveactordown=ausgewählten Darsteller nach unten verschieben
+movie.edit.moveproducerup=ausgewählten Produzenten nach oben verschieben
+movie.edit.moveproducerdown=ausgewählten Produzenten nach unten verschieben
+
 
 movie.inmovieset=Film in Filmset
 movie.notinmovieset=Film in keinem Filmset
 movie.change=Film wechseln
 
 movieset.add.desc=Filmset hinzufügen
-movieset.remove.desc=Ausgewähltes Filmset entfernen
+movieset.remove.desc=Ausgewählte Filmset(s) entfernen
 movieset.title=Filmset Name
 movieset.search=Suche in TMDB nach Filmset Metadaten
 movieset.tmdb.find=Suche TMDB ID
@@ -106,9 +121,11 @@ movieset.movie.movedown=Ausgewählten Film nach unten verschieben
 movieset.save.desc=Filmset Daten speichern
 
 cast.actor.add=neuen Schauspieler hinzufügen
-cast.actor.remove=Schauspieler entfernen
+cast.actor.remove=ausgewählten Darsteller entfernen
 cast.actor.unknown=unbekannter Schauspieler
 cast.role.unknown=unbekannte Rolle
+cast.producer.add=neuen Produzent hinzufügen
+cast.producer.remove=ausgewählten Produzent entfernen
 
 scraper=Scraper
 scraper.metadata.select=Wähle die zu importierenden Metadaten
@@ -202,6 +219,7 @@ Settings.languagehint=Die Sprache wird bei beim nächsten Start geändert
 
 # image settings
 Settings.poster=Poster und Fanart
+Settings.images=<html><center>Film -<br>Bilder</center></html>
 Settings.source=Datenherkunft
 Settings.fanarttv.alert=Achtung\: Fanart.tv unterstützt keine Film Poster\!
 Settings.moviefilename=<Film Dateiname>
@@ -218,16 +236,24 @@ Settings.movieset.store=Speichere Movieset Artwork in einem seperaten Verzeichni
 Settings.movieset.foldername=Verzeichnis Name
 Settings.movieset.buttonselect=Verzeichnis auswählen
 Settings.movieset.folderchooser=Wähle das Movieset Artwork Verzeichnis
+# Settings.image.small=Small
+# Settings.image.medium=Medium
+# Settings.image.big=Big
+# Settings.image.large=Large
 
 # scraper settings
 Settings.getfromTMDB=Plot/Title/Tagline von der TMDB übernehmen?
 Settings.preferredLanguage=bevorzugte Sprache
 Settings.certificationCountry=lokalisierte Altersbeschränkung
+Settings.scraperTreshold=Such-Grenzwert
+Settings.scraperTreshold.hint=Das ist der Wert, wie gut der Suchbegriff mit dem Ergebnis übereinstimmt.\n'Automtisch Scrapen' ignoriert Ergebnisse unter diesem Wert.\nACHTUNG\: ist der Wert zu niedrig, können falsche Ergebnisse genommen werden\!\n\n1 \= 100% gleich\n0.75 \= Standardwert\n0 \= komplett unterschiedlich
 Settings.default.autoscrape=Automatisch Bilder herunterladen (ohne manueller Auswahl)
+# Settings.automaticscraper=Automatic scraper
 
 # movie settings
 Settings.movie.datasource=Film Verzeichnis
 Settings.movie.datasource.remove.info=Wenn du %s von den Datenordnern entfernst, werden alle Filme in diesem Pfad aus der Datenbank entfernt. Weitermachen?
+# Settings.movie.visiblecolumns=Visible columns
 
 Settings.datasource.folderchooser=Film Verzeichnis hinzufügen
 Settings.datasource.remove=Film Verzeichnis entfernen
@@ -244,6 +270,8 @@ Settings.sorting.info=Präfix auswählen, welcher die Sortierung der Liste beein
 Settings.renamer=Film Dateien umbenennen
 Settings.renamer.folder=Verzeichnis
 Settings.renamer.file=Dateiname
+# Settings.renamer.asciireplacement=Replace non ASCII characters with their basic ASCII equivalents
+# Settings.renamer.asciireplacement.hint=Examples\: Ä \=> Ae; Ö \=> Oe; ß \=> ss; Á \= > A; Æ \=> Ae; ...
 Settings.cleanupoptions=Cleanup Optionen
 Settings.renamer.removenfo=alle anderen NFOs entfernen
 Settings.renamer.moviesetsinglemovie=Erzeuge MovieSet Ordner auch dann an, wenn nur ein Film enthalten ist.
@@ -252,8 +280,11 @@ Settings.imagecacheimport=Bildercache beim Import aufbauen
 Settings.imagecacheimporthint=Achtung\: das Aufbauen des Caches könnte eine Weile dauern
 Settings.devicename=Gerätename
 Settings.macaddress=MAC Adresse
+# Settings.movie.badwords=Bad words
+# Settings.movie.badwords.hint=Bad words, which will be removed from\r\nthe detected movie name
+# Settings.runtimefrommediafile=Prefer runtime from MediaInfo
 
-Settings.movie.renamer.info=Verfügbare Werte\n$T \= Titel\n$O \= Original Titel\n$1 \= Erster Buchstabe des Titels\n$E \= Titel sortiert\n$2 \= Erster Buchstabe des sortierten Titels\n$Y \= Jahr\n$M \= Filmset Titel (sortiert)\n$N \= Filmset Titel\n$I \= IMDB Nummer\n$C \= Altersbeschränkung\n$R \= Video Auflösung\n$A \= Audio Codec + Kanäle\n$V \= Video Codec + Format\n$F \= Video Format
+Settings.movie.renamer.info=Verfügbare Werte\:\n$T \= Titel\n$O \= Original Titel\n$1 \= Erster Buchstabe des Titels\n$E \= Titel sortiert\n$2 \= Erster Buchstabe des sortierten Titels\n$Y \= Jahr\n$M \= Filmset Titel (sortiert)\n$N \= Filmset Titel\n$I \= IMDB Nummer\n$C \= Altersbeschränkung\n$R \= Video Auflösung\n$A \= Audio Codec + Kanäle\n$V \= Video Codec + Format\n$F \= Video Format\n\n{} \= optionales Ersetzen\nzB\: {Jahr $Y} -> "Jahr 2013" wenn Y$ nicht leer ist.\nWenn Y$ leer ist (oder keine $x Variable dazwischen)\ndann ist der komplette {} Tag leer.
 Settings.movie.renamer.example=Wähle die Namensvorlage für Dateien und Ordner.\nWenn leer, wird das Umbenennen übersprungen.
 Settings.movie.renamer.nomovie=brauche wenigstens einen (gescrapten) Film für die Vorschau
 Settings.movie.renamer.spacesubstitution=Leerzeichen ersetzen durch
@@ -270,6 +301,7 @@ Settings.tvshowtofilename=TvShow Name dem Dateinamen hinzufügen
 Settings.tvshowepisodetofilename=Episodentitle dem Dateinamen hinzufügen
 Settings.tvshowseasonfoldername=Saison Ordnername
 Settings.tvshowseasonhint=$1 - Saison Nummer\n$2 - Saison Nummer mit 2 Stellen
+# Settings.separator=Separator
 
 # tv shows
 tvshow.scrape.newitems=Neu gefundene Dateien scrapen
@@ -307,6 +339,8 @@ metatag.cast=Besetzung
 metatag.certification=Altersbeschränkung
 metatag.codec=Codec
 metatag.country=Land
+metatag.crew=Crew
+metatag.datasource=Film Verzeichnis
 metatag.dateadded=hinzugefügt am
 metatag.details=Detail
 metatag.details2=Detail 2
@@ -332,6 +366,7 @@ metatag.originaltitle=Original Titel
 metatag.path=Pfad
 metatag.plot=Inhaltsangabe
 metatag.production=Produktion
+metatag.producers=Produzenten
 metatag.premiered=Erstausstrahlung
 metatag.quality=Qualität
 metatag.rating=Bewertung
@@ -354,6 +389,7 @@ metatag.tagline=kurze Inhaltsangabe
 metatag.tags=Markierungen
 metatag.title=Titel
 metatag.tmdb=TMDB Id
+metatag.top250=Top 250
 metatag.tvdb=TvDB ID
 metatag.tvshow=TV Show
 metatag.tvshows=TV Shows
@@ -370,6 +406,7 @@ metatag.trailer=Film Trailer
 
 mediafiletype.unknown=Unbekannt
 mediafiletype.video=Video
+# mediafiletype.video_extra=Video Extras
 mediafiletype.audio=Audio
 mediafiletype.subtitle=Untertitel
 mediafiletype.nfo=Info
@@ -382,6 +419,8 @@ mediafiletype.extrafanart=Extrafanart
 mediafiletype.graphic=Grafik
 mediafiletype.movie=Film
 mediafiletype.episode=Episode
+mediafiletype.season_poster=Saison Poster
+# mediafiletype.sample=Sample
 
 chooser.nothingfound=nichts gefunden
 chooser.scrapeing=Scrapen\:
@@ -393,6 +432,7 @@ moviechooser.search=Film suchen
 tvshowchooser.search=Suche TV Show
 tvshowepisodechooser.search=Episode suchen
 
+movieextendedsearch.filter=Filter
 movieextendedsearch.options=Erweiterte Filter und Sortierungsmöglichkeiten
 movieextendedsearch.filterby=filtern nach
 movieextendedsearch.duplicates=doppelte anzeigen
@@ -402,6 +442,11 @@ movieextendedsearch.cast=Besetzung
 movieextendedsearch.tag=Markierung
 movieextendedsearch.movieset=Filme in Filmsets
 movieextendedsearch.sortby=sortiert nach
+movieextendedsearch.missingmetadata=fehlende Metadaten
+movieextendedsearch.missingartwork=fehlende Grafiken
+movieextendedsearch.missingsubtitles=fehlende Untertitel
+# movieextendedsearch.newmovies=New movies
+# movieextendedsearch.newepisodes=New episodes
 
 logwindow.title=Fehlerbericht
 summarywindow.title=Zusammenfassung
