--- a/locale/messages_nl.properties
+++ b/locale/messages_nl.properties
@@ -28,7 +28,7 @@ tmm.settings=Instellingen
 # menu actions
 tmm.exit=Afsluiten
 tmm.exit.runningtasks=Weet u zeker dat u tinyMediaManager wilt afsluiten?\nEr zijn nog actieve processen...
-tmm.exit.confirmation=Bevestiging voor afsluiten
+tmm.exit.confirmation=Afsluit bevestiging
 tmm.cache=Cache
 tmm.clearurlcache=Wis url cache
 tmm.clearimagecache=wis afbeelding cache
@@ -46,6 +46,16 @@ tmm.donate=Doneren
 tmm.searchfield=Zoeken...
 tmm.errorlogs=Toon fout log
 tmm.wakeonlandevice=Wake on LAN apparaat
+tmm.wakeonlan=Wake on LAN
+tmm.version=Versie
+tmm.builddate=Build datum
+tmm.homepage=Homepage
+tmm.thanksto=Met dank aan
+tmm.of=van
+tmm.nfo=NFO
+tmm.images=Afbeeldingen
+tmm.trailer=Trailer
+tmm.subtitles=Ondertitels
 
 status.activethreads=actieve processen
 status.queuesize=Wachtlijst\:
@@ -72,7 +82,7 @@ movie.scrape.metadata.desc=Scrape metadata voor geselecteerd film(s)
 movie.scrape.nomatchfound=Geen geschikte film gevonden tijdens het zoeken
 movie.scrape.toosimilar=Film titels lijken teveel op elkaar - Kan niet beslissen welke te gebruiken
 movie.scrape.toolowscore=Gelijkenis score was te laag (<0.75) dus dit resultaat wordt niet gebruikt
-movie.remove=Verwijder geselecteerd film(s)
+movie.remove=Verwijder geselecteerde film(s)
 movie.rename=Geselecteerde film(s) hernoemen/opschonen 
 movie.updatemediainfo=Media informatie van geselecteerde film(s) bijwerken
 movie.bulkedit=Bulk bewerken
@@ -80,17 +90,22 @@ movie.bulkedit.desc=Wijzig genres, tags, filmset en bekeken indicator voor gesel
 movie.rewritenfo=Herschrijf NFO voor geselecteerde film(s)
 movie.clearimagecache=Wis afbeelding cache voor geselecteerde film(s)
 
-movie.export=Geselecteerd film(s) exporteren
+movie.export=Geselecteerde film(s) exporteren
 
 movie.edit=Film bewerken
 movie.edit.abortqueue.desc=Stop bewerking geselecteerde films
+movie.edit.moveactorup=Geselecteerde acteur omhoog
+movie.edit.moveactordown=Geselecteerde acteur omlaag
+movie.edit.moveproducerup=Geselecteerde producent omhoog
+movie.edit.moveproducerdown=Geselecteerde producent omlaag
+
 
 movie.inmovieset=Films in een filmset
 movie.notinmovieset=Films niet in een filmset
 movie.change=Wijzig film
 
 movieset.add.desc=Film set toevoegen
-movieset.remove.desc=Verwijder geselecteerde film set
+movieset.remove.desc=Verwijder geselecteerde film set(s)
 movieset.title=Filmset titel\:
 movieset.search=Zoek bij TMDB naar filmset metadata
 movieset.tmdb.find=Zoek TMDBid
@@ -101,14 +116,16 @@ movieset.parts=Delen in filmset
 movieset.movie.assign=Films aan filmset toevoegen
 movieset.movie.matched=matchende film
 movieset.movie.remove=Geselecteerd film uit filmset verwijderen
-movieset.movie.moveup=Geselecteerd film omhoog verplaatsen
-movieset.movie.movedown=Geselecteerd film omlaag verplaatsen
+movieset.movie.moveup=Gemarkeerde film omhoog
+movieset.movie.movedown=Gemarkeerde film omlaag
 movieset.save.desc=Filmset metadata opslaan
 
 cast.actor.add=Nieuwe acteur toevoegen
-cast.actor.remove=Acteur verwijderen
+cast.actor.remove=Verwijder geselecteerde Acteur
 cast.actor.unknown=Onbekende acteur
 cast.role.unknown=Onbekende rol
+cast.producer.add=Voeg een nieuwe Producer toe
+cast.producer.remove=Verwijder geselecteerde Producer
 
 scraper=Scraper
 scraper.metadata.select=Selecteer te scrapen metadata
@@ -202,6 +219,7 @@ Settings.languagehint=De taal zal veranderen na herstart
 
 # image settings
 Settings.poster=Poster en Fanart
+Settings.images=<html><center>Film -<br>Afbeeldingen</center></html>
 Settings.source=Bron
 Settings.fanarttv.alert=Attentie\: Fanart.tv verstrekt geen poster
 Settings.moviefilename=<film bestandsnaam>
@@ -218,16 +236,24 @@ Settings.movieset.store=Filmset artwork in een separate map opslaan
 Settings.movieset.foldername=Map naam
 Settings.movieset.buttonselect=Map selecteren
 Settings.movieset.folderchooser=Filmset artwork map selecteren
+Settings.image.small=Klein
+Settings.image.medium=Medium
+Settings.image.big=Groot
+Settings.image.large=Extra groot
 
 # scraper settings
 Settings.getfromTMDB=Plot/Titel/Tagline van TMDB
 Settings.preferredLanguage=Voorkeurstaal
 Settings.certificationCountry=Certificatie land
+Settings.scraperTreshold=Waardering drempel
+Settings.scraperTreshold.hint=Dit is een indicator hoe gelijkend de zoek vraag en resulaten zijn.\nDe automatische scraper negeerd resultaten die onder de drempel vallen.\nOPGELET\: Een te lage waarde zal resulteren in foutieve resultaten\!\n\n1 \= 100% gelijkend\n0.75 \= Standaard\n0 \= Ze zijn totaal verschillend
 Settings.default.autoscrape=Afbeeldingen automatisch scrapen (zonder selectie)
+Settings.automaticscraper=Automatische scraper
 
 # movie settings
 Settings.movie.datasource=Databronnen
 Settings.movie.datasource.remove.info=Als je %s van de databronnen verwijderd worden alle films binnen dit pad uit de database verwijderd. Doorgaan?
+Settings.movie.visiblecolumns=Zichtbare kolommen
 
 Settings.datasource.folderchooser=Bron toevoegen
 Settings.datasource.remove=Databron verwijderen
@@ -244,6 +270,8 @@ Settings.sorting.info=Kies voorvoegsels. Heeft invloed op de sorteer volgorde va
 Settings.renamer=Naam Aanpasser
 Settings.renamer.folder=Map naam
 Settings.renamer.file=Bestandsnaam
+Settings.renamer.asciireplacement=Vervang niet ASCII karakters met hun basis ASCII equivalent
+Settings.renamer.asciireplacement.hint=Voorbeelden\: Ä \=> Ae; Ö \=> Oe; ß \=> ss; Á \= > A; Æ \=> Ae; ...
 Settings.cleanupoptions=Opschoon opties
 Settings.renamer.removenfo=wis alle andere NFO's
 Settings.renamer.moviesetsinglemovie=Maak ook een filmset map voor filmsets met maar één film
@@ -252,8 +280,11 @@ Settings.imagecacheimport=Creëer afbeelding cache tijdens import
 Settings.imagecacheimporthint=Attentie\: dit neemt enige tijd in beslag en werkt alleen als afbeelding cache is geactiveerd
 Settings.devicename=Apparaat naam
 Settings.macaddress=MAC adres
+Settings.movie.badwords=ongeoorloofd taalgebruik
+Settings.movie.badwords.hint=Ongeoorloofde woorden, welke zullen worden\nverwijderd van de gevonden film naam
+Settings.runtimefrommediafile=Voorkeurs runtime van MediaInfo
 
-Settings.movie.renamer.info=Beschikbare methodes\:\n$T \= Titel\n$O \= Originele titel\n$1 \= Eerste letter van titel\n$E \= Sorteer titel\n$2 \= Eerste letter van Sorteer titel\n$Y \= Jaar\n$M \= Filmset titel (sorteer titel)\n$N \= Filmset titel\n$I \= IMDB nummer\n$C \= Certificering\n$R \= Video resolutie\n$A \= Audio code + kanalen\n$V \= Video code + formaat\n$F \= video formaat
+Settings.movie.renamer.info=Beschikbare methodes\:\n$T \= Titel\n$O \= Originele titel\n$1 \= Eerste letter van titel\n$E \= Sorteer titel\n$2 \= Eerste letter van Sorteer titel\n$Y \= Jaar\n$M \= Filmset titel (sorteer titel)\n$N \= Filmset titel\n$I \= IMDB nummer\n$C \= Certificering\n$R \= Video resolutie\n$A \= Audio code + kanalen\n$V \= Video code + formaat\n$F \= video formaat\n\n{} \= Optionele vervanging\nbv\: {Jaar $Y} -> "Jaar 2013" als $Y niet leeg is\nals $Y leeg is (of geen $x vervanging)\nde complete tag is leeg
 Settings.movie.renamer.example=Kies een hernoem patroon voor de map en bestand \nHernoemen wordt overgeslagen bij lege velden\!
 Settings.movie.renamer.nomovie=tenmiste één film is nodig voor het voorbeeld
 Settings.movie.renamer.spacesubstitution=Vervang spaties door
@@ -270,6 +301,7 @@ Settings.tvshowtofilename=voeg TV serie naam aan bestandsnaam toe
 Settings.tvshowepisodetofilename=voeg aflevering titel toe aan bestandsnaam
 Settings.tvshowseasonfoldername=seizoen map naam
 Settings.tvshowseasonhint=$1 - Seizoen nummer\n$2 - Seizoen nummer met minstens 2 cijfers
+Settings.separator=Seperator
 
 # tv shows
 tvshow.scrape.newitems=Scrape nieuwe onderdelen
@@ -307,6 +339,8 @@ metatag.cast=Cast
 metatag.certification=Cerftificatie
 metatag.codec=Codec
 metatag.country=Land
+metatag.crew=Crew
+metatag.datasource=Databron
 metatag.dateadded=Datum toegevoegd
 metatag.details=Details
 metatag.details2=Details 2
@@ -332,6 +366,7 @@ metatag.originaltitle=Originele Titel
 metatag.path=Pad
 metatag.plot=Plot
 metatag.production=Productie
+metatag.producers=Producenten
 metatag.premiered=Première
 metatag.quality=Kwaliteit
 metatag.rating=Rating
@@ -354,6 +389,7 @@ metatag.tagline=Tagline
 metatag.tags=Tags
 metatag.title=Titel
 metatag.tmdb=TMDB Id
+metatag.top250=Top 250
 metatag.tvdb=TheTvDB Id
 metatag.tvshow=TV serie
 metatag.tvshows=TV series
@@ -370,6 +406,7 @@ metatag.trailer=Trailer
 
 mediafiletype.unknown=Onbekend
 mediafiletype.video=Video
+mediafiletype.video_extra=Video Extra's
 mediafiletype.audio=Audio
 mediafiletype.subtitle=Ondertitel
 mediafiletype.nfo=NFO
@@ -382,6 +419,8 @@ mediafiletype.extrafanart=Extrafanart
 mediafiletype.graphic=Graphic
 mediafiletype.movie=Film
 mediafiletype.episode=Aflevering
+mediafiletype.season_poster=Seizoen poster
+mediafiletype.sample=Voorbeeld
 
 chooser.nothingfound=niets gevonden
 chooser.scrapeing=scrapen\:
@@ -393,6 +432,7 @@ moviechooser.search=Zoek film
 tvshowchooser.search=Zoek TV serie
 tvshowepisodechooser.search=Zoek aflevering
 
+movieextendedsearch.filter=Filter
 movieextendedsearch.options=Uitgebreide filter en sorteer opties
 movieextendedsearch.filterby=Filter
 movieextendedsearch.duplicates=Toon duplicaten
@@ -402,6 +442,11 @@ movieextendedsearch.cast=Cast lid
 movieextendedsearch.tag=Tag
 movieextendedsearch.movieset=Films onderdeel van een filmset
 movieextendedsearch.sortby=Sorteer volgens
+movieextendedsearch.missingmetadata=Ontbrekende metadata
+movieextendedsearch.missingartwork=Ontbrekend artwork
+movieextendedsearch.missingsubtitles=Ontbrekende ondertitels
+movieextendedsearch.newmovies=Nieuwe films
+movieextendedsearch.newepisodes=Nieuwe afleveringen
 
 logwindow.title=Fout logs
 summarywindow.title=Overzicht
