--- a/locale/messages_sk.properties
+++ b/locale/messages_sk.properties
@@ -34,7 +34,7 @@ tmm.clearurlcache=vyčistiť vyrovnávaciu pamäť url
 tmm.clearimagecache=vyčistiť vyrovnávaciu pamäť obrázkov
 tmm.rebuildimagecache=Obnoviť vyrovnávaciu pamäť obrázkov
 tmm.cleardatabase=Inicializácia databázy
-# tmm.cleardatabase.hint=Be careful\: this will remove the complete database to start with a new one. Proceed?
+tmm.cleardatabase.hint=Upozornenie\: týmto odstránite celú databázu a začne novú. Chcete Pokračovať?
 tmm.cleardatabase.info=Databáza inicializovaná. Prosím reštartujte tinyMediaManager
 tmm.cleardatabase.error=Pri inicializácii databázy došlo k chybe. Prosím vymažte súbor tmm.odb ručne.
 tmm.gotoinstalldir=Otvoriť inštalačný adresár tMM v prehliadaši súborov
@@ -45,7 +45,17 @@ tmm.contact=Kontakt
 tmm.donate=Prispieť
 tmm.searchfield=Hľadať...
 tmm.errorlogs=Zobraziť protokol chýb
-# tmm.wakeonlandevice=Wake on LAN device
+tmm.wakeonlandevice=Wake on LAN device
+tmm.wakeonlan=Wake on LAN
+tmm.version=Verzia
+tmm.builddate=Dátum zostavenia
+tmm.homepage=Domovská stránka
+tmm.thanksto=Vďaka
+tmm.of=z
+tmm.nfo=NFO
+tmm.images=Obrázky
+tmm.trailer=Trailer
+tmm.subtitles=Titulky
 
 status.activethreads=aktívne vlákna
 status.queuesize=Front\:
@@ -84,13 +94,18 @@ movie.export=Exportovať označené filmy
 
 movie.edit=Upraviť film
 movie.edit.abortqueue.desc=Prerušiť upravovanie všetkých označených filmov
+movie.edit.moveactorup=Presunúť označeného herca vyššie
+movie.edit.moveactordown=Presunúť označeného herca nižšie
+movie.edit.moveproducerup=Presunúť označeného producenta vyššie
+movie.edit.moveproducerdown=Presunúť označeného herca nižšie
+
 
 movie.inmovieset=Filmy v kolekcii
 movie.notinmovieset=Filmy, ktoré nie sú v kolekcii
 movie.change=Zmeniť film
 
 movieset.add.desc=Pridať kolekciu filmov
-movieset.remove.desc=Odstrániť označenú kolekciu filmov
+movieset.remove.desc=Odstrániť označené kolekcie filmov
 movieset.title=Názov kolekcie filmov
 movieset.search=Vyhľadať metadáta kolekcie v TMDB
 movieset.tmdb.find=Nájsť Tmdb Id
@@ -106,9 +121,11 @@ movieset.movie.movedown=Premiestniť označený film dole
 movieset.save.desc=Uložiť metadáta kolekcie
 
 cast.actor.add=Pridať herca
-cast.actor.remove=Odstrániť herca
+cast.actor.remove=Odstrániť označeného herca
 cast.actor.unknown=neznámy herec
 cast.role.unknown=neznáma úloha
+cast.producer.add=Pridať producenta
+cast.producer.remove=Odstrániť označeného producenta
 
 scraper=Sťahovač
 scraper.metadata.select=Vyberte metadáta na stiahnutie
@@ -186,7 +203,7 @@ Settings.general=Všeobecné
 Settings.externaldevices=<html>Externé<br>zariadenia</html>
 
 # general settings
-Settings.proxy=Nastavenia roxy
+Settings.proxy=Nastavenia proxy
 Settings.proxyhost=Host
 Settings.proxyport=Port
 Settings.proxyuser=Užívateľské meno
@@ -202,6 +219,7 @@ Settings.languagehint=Jazyk sa zmení po reštarte\!
 
 # image settings
 Settings.poster=Plagát a FanArt
+Settings.images=<html><center>Filmy -<br>Obrázky</center></html>
 Settings.source=Zdroj
 Settings.fanarttv.alert=Výstraha\: Fanart.tv neposkytuje plagát
 Settings.moviefilename=<názov filmu>
@@ -218,22 +236,30 @@ Settings.movieset.store=Ukladať artwork pre kolekcie v samostatnom priečinku
 Settings.movieset.foldername=Názov priečinku
 Settings.movieset.buttonselect=Vyberte priečinok
 Settings.movieset.folderchooser=Vyberte priečinok pre artwork kolekcii
+Settings.image.small=Malý
+Settings.image.medium=Stredný
+Settings.image.big=Veľký
+Settings.image.large=Large
 
 # scraper settings
 Settings.getfromTMDB=Obsah/Názov/Stručné info z TMDB
 Settings.preferredLanguage=Preferovaný jazyk
 Settings.certificationCountry=Krajina pre certifikáciu
+Settings.scraperTreshold=Hranica zhody pre vyhľadávanie
+Settings.scraperTreshold.hint=Toto je ukazovateľ zhody vyhľadávaného dotazu s nájdenými výsledkami. \nAutomatický sťahovač bude ignorovať výsledky vyhľadávania pod hranicou.\nPOZOR\: Nastavenie hranice príliš nízko bude mať za následok chybné výsledky\! \n\n1 \= 100% rovnaké \n0,75 \= predvolená\n0 \= úplne odlišné
 Settings.default.autoscrape=automaticky sťahovať obrázky (bez výberu)
+Settings.automaticscraper=Automatický sťahovač
 
 # movie settings
 Settings.movie.datasource=Zdroje dát
 Settings.movie.datasource.remove.info=Pokiaľ odstránite %s z vašich zdrojov dát, všetky filmy v tomto umiestnení budú odstránené z databázy. Chcete pokračovať?
+Settings.movie.visiblecolumns=Zobrazené položky
 
 Settings.datasource.folderchooser=Pridať zdroj dát
 Settings.datasource.remove=Odstrániť zdroj dát
 
 Settings.multipleMovies=Povoliť viac filmov v jednom priečinku
-# Settings.multipleMovies.hint=BE AWARE\: this option will allow you to import multiple movies per folder.\nEnabling this will cause some side effects\: you are no longer be able to\nchoose any specific file naming or use extrafanart/extrathumbs.\nUSING MULTIPLE MOVIES PER FOLDER IS NOT RECOMMENDED\!
+Settings.multipleMovies.hint=POZOR\: Táto voľba umožní importovať viacero filmov z jedného adresára.\nPo povolení tejto funkcie nebude možné vybrať špecifické pomenovanie súborov\nani použiť extraFanArt.\nPOUŽITIE VIACERÝCH FILMOV NA ADRESÁR SA NEDOPORUČUJE\!
 Settings.nfoFormat=Formát NFO
 Settings.nofFileNaming=Pomenovanie súboru NFO
 Settings.videofiletypes=Video typy súborov
@@ -244,16 +270,21 @@ Settings.sorting.info=Vyberte prefixy, ktoré budú mať vplyv na poradie v zozn
 Settings.renamer=Premenovanie
 Settings.renamer.folder=Názov priečinku
 Settings.renamer.file=Názov súboru
+Settings.renamer.asciireplacement=Nahradiť znaky nenachádzajúce sa v ASCII ich ekvivalentami ASCII
+Settings.renamer.asciireplacement.hint=Napíklad\: Ä \=> Ae; Ö \=> Oe; ß \=> ss; Á \= > A; Æ \=> Ae; ...
 Settings.cleanupoptions=Nastavenia čistenia
 Settings.renamer.removenfo=Odstrániť všetky ostatné NFO
-# Settings.renamer.moviesetsinglemovie=Also create movieset folder for moviesets with only one movie
+Settings.renamer.moviesetsinglemovie=Vytvoriť priečinok kolekcie aj pre kolekcie s jedným filmom
 Settings.example=Príklad
-# Settings.imagecacheimport=Build image cache on import
+Settings.imagecacheimport=Vytvor cache obrázkov pri importe
 Settings.imagecacheimporthint=Pozor\: táto operácia môže chvíľu trvať. Funguje len vtedy, ak je povolená medzipamäť obrázkov
 Settings.devicename=Názov zariadenia
 Settings.macaddress=MAC adresa
+Settings.movie.badwords=Nesprávne slová
+Settings.movie.badwords.hint=Nesprávne slová, ktoré budú odstránené z hľadaného názvu filmu
+Settings.runtimefrommediafile=Uprednostniť runtime z MediaInfo
 
-Settings.movie.renamer.info=Dostupné vzorce\n$T \= Názov\n$O \= Pôvodný názov\n$1 \= Prvé písmeno názvu\n$E \= Názov pre usporiadanie\n$2 \= Prvé písmeno názvu pre usporiadanie\n$Y \= Rok\n$M \= Názov kolekcie filmov (názov pre usporiadanie)\n$N \= Názov kolekcie filmov\n$I \= IMDB číslo\n$C \= Certifikát\n$R \= Rozlíšenie videa\n$A \= Audio kódovanie + kanály\n$V \= Video kódovanie + formát\n$F \= Video formát
+Settings.movie.renamer.info=Dostupné vzorce\n$T \= Názov\n$O \= Pôvodný názov\n$1 \= Prvé písmeno názvu\n$E \= Názov pre usporiadanie\n$2 \= Prvé písmeno názvu pre usporiadanie\n$Y \= Rok\n$M \= Názov kolekcie filmov (názov pre usporiadanie)\n$N \= Názov kolekcie filmov\n$I \= IMDB číslo\n$C \= Certifikát\n$R \= Rozlíšenie videa\n$A \= Audio kódovanie + kanály\n$V \= Video kódovanie + formát\n$F \= Video formát\n\n{} \= voliteľná náhrada\nnapr.\: {Rok $Y} -> "Rok 2013"ak $Y nie je prázdny\nak $Y je prázdny (alebo nie je vnútri náhrada $x)\ncelý tag je prázdny
 Settings.movie.renamer.example=Vyberte vzor pre premenovanie priečinku a súboru.\nAk sú polia prázdne, premenovanie bude preskočené\!
 Settings.movie.renamer.nomovie=pre príklad Je potrebný aspoň jeden film
 Settings.movie.renamer.spacesubstitution=Miesto medzery použiť
@@ -270,6 +301,7 @@ Settings.tvshowtofilename=Pridať názov seriálu do názvu súboru
 Settings.tvshowepisodetofilename=Pridať názov epizódy do názvu súboru
 Settings.tvshowseasonfoldername=Názov priečinku sezóny
 Settings.tvshowseasonhint=$1 - Číslo sezóny\n$2 - Číslo sezóny s aspoň dvoma číslicami
+Settings.separator=Oddeľovač
 
 # tv shows
 tvshow.scrape.newitems=Stiahni informácie nových položiek
@@ -289,7 +321,7 @@ tvshow.update=Aktualizovať označené seriály
 tvshow.rewritenfo=Prepísať NFO označených seriálov
 tvshow.rename=Premenovať/vyčistiť označené seriály/epizódy
 tvshow.clearimagecache=Vyčistiť medzipamäť obrázkov pre označené seriály/epizódy
-# tvshow.renamer.failedrename=Failed to rename episode {} - invalid season and/or episode number
+tvshow.renamer.failedrename=Nepodarilo sa premenovať epizódu {} - nesprávne číslo epizódy alebo sezóny
 
 tvshowepisode.scrape=Stiahni metadáta epizódy
 tvshowepisode.clone=klonovať epizódu
@@ -307,6 +339,8 @@ metatag.cast=Obsadenie
 metatag.certification=Certifikácia
 metatag.codec=Kodek
 metatag.country=Krajina
+metatag.crew=Štáb
+metatag.datasource=Zdroj dát
 metatag.dateadded=Dátum pridania
 metatag.details=Detaily
 metatag.details2=Detaily 2
@@ -332,6 +366,7 @@ metatag.originaltitle=Pôvodný názov
 metatag.path=Umiestnenie
 metatag.plot=Obsah
 metatag.production=Produkcia
+metatag.producers=Producenti
 metatag.premiered=Premiéra
 metatag.quality=Kvalita
 metatag.rating=Hodnotenie
@@ -354,6 +389,7 @@ metatag.tagline=Stručné info
 metatag.tags=Značky
 metatag.title=Názov
 metatag.tmdb=TMDB Id
+metatag.top250=Top 250
 metatag.tvdb=TheTVDB Id
 metatag.tvshow=Seriál
 metatag.tvshows=Seriály
@@ -370,6 +406,7 @@ metatag.trailer=Ukážka
 
 mediafiletype.unknown=Neznámy
 mediafiletype.video=Video
+mediafiletype.video_extra=Video Extras
 mediafiletype.audio=Audio
 mediafiletype.subtitle=Titulky
 mediafiletype.nfo=NFO
@@ -382,6 +419,8 @@ mediafiletype.extrafanart=Extra FanArt
 mediafiletype.graphic=Grafika
 mediafiletype.movie=Film
 mediafiletype.episode=Epizóda
+mediafiletype.season_poster=Plagát sezóny
+mediafiletype.sample=Vzorka
 
 chooser.nothingfound=nič nenájdené
 chooser.scrapeing=sťahovanie informácii\:
@@ -393,6 +432,7 @@ moviechooser.search=Vyhľadať film
 tvshowchooser.search=Vyhľadať seriál
 tvshowepisodechooser.search=Vyhľadať epizódu
 
+movieextendedsearch.filter=Filter
 movieextendedsearch.options=Nastavenia rozšíreného filtra a usporiadania
 movieextendedsearch.filterby=filtrovať podľa
 movieextendedsearch.duplicates=Zobraziť duplikáty
@@ -402,6 +442,11 @@ movieextendedsearch.cast=Obsadenie
 movieextendedsearch.tag=Značka
 movieextendedsearch.movieset=Filmy v kolekcii
 movieextendedsearch.sortby=Zoradiť podľa
+movieextendedsearch.missingmetadata=Chýbajúce metadáta
+movieextendedsearch.missingartwork=Chýbajúci artwork
+movieextendedsearch.missingsubtitles=Chýbajúce titulky
+movieextendedsearch.newmovies=Nové filmy
+movieextendedsearch.newepisodes=Nové epizódy
 
 logwindow.title=Protokol chýb
 summarywindow.title=Súhrn
