--- a/locale/messages_pt.properties
+++ b/locale/messages_pt.properties
@@ -46,6 +46,16 @@ tmm.donate=Doar
 tmm.searchfield=Buscar...
 tmm.errorlogs=Mostrar log de erros
 tmm.wakeonlandevice=Dispositivo Wake on LAN
+# tmm.wakeonlan=Wake on LAN
+# tmm.version=Version
+# tmm.builddate=Build date
+# tmm.homepage=Homepage
+# tmm.thanksto=Thanks to
+# tmm.of=of
+# tmm.nfo=NFO
+# tmm.images=Images
+# tmm.trailer=Trailer
+# tmm.subtitles=Subtitles
 
 status.activethreads=processos ativos
 status.queuesize=Fila\:
@@ -84,13 +94,18 @@ movie.export=Exportar filme(s) selecionado(s)
 
 movie.edit=Editar filme
 movie.edit.abortqueue.desc=Abortar edição dos filmes selecionados
+# movie.edit.moveactorup=Move selected actor up
+# movie.edit.moveactordown=Move selected actor down
+# movie.edit.moveproducerup=Move selected producer up
+# movie.edit.moveproducerdown=Move selected producer down
+
 
 movie.inmovieset=Editar filme(s) em uma coleção
 movie.notinmovieset=Filmes individuais
 movie.change=Alterar filme
 
 movieset.add.desc=Adicionar uma coleção
-movieset.remove.desc=Remover coleção selecionada
+# movieset.remove.desc=Remove selected movie set(s)
 movieset.title=Título da coleção\:
 movieset.search=Procurar TMDB para dados da coleção
 movieset.tmdb.find=Encontrar TmdbId
@@ -106,9 +121,11 @@ movieset.movie.movedown=Mover o filme marcado p/ baixo
 movieset.save.desc=Salvar metadata da coleção
 
 cast.actor.add=Adicionar novo Ator
-cast.actor.remove=Remover Ator
+# cast.actor.remove=Remove selected Actor
 cast.actor.unknown=ator desconhecido
 cast.role.unknown=papel desconhecido
+# cast.producer.add=Add a new Producer
+# cast.producer.remove=Remove selected Producer
 
 scraper=Buscador
 scraper.metadata.select=Selecione dados para serem buscados
@@ -202,6 +219,7 @@ Settings.languagehint=O idioma será alterado após reiniciar\!
 
 # image settings
 Settings.poster=Pôster e Fanart
+Settings.images=<html><center>Filmes -<br>Imagens</center></html>
 Settings.source=Origem
 Settings.fanarttv.alert=Atenção\: Fanart.tv não fornece pôster
 Settings.moviefilename=<nomearquivo filme>
@@ -218,16 +236,24 @@ Settings.movieset.store=Armazenar artwork de coleções em diretório separado
 Settings.movieset.foldername=Diretório
 Settings.movieset.buttonselect=Selecione diretório
 Settings.movieset.folderchooser=selecione diretório da artwork da coleção
+# Settings.image.small=Small
+# Settings.image.medium=Medium
+# Settings.image.big=Big
+# Settings.image.large=Large
 
 # scraper settings
 Settings.getfromTMDB=Sinopse/Título/Chamada do TMDB
 Settings.preferredLanguage=Idioma preferid
 Settings.certificationCountry=País de certificação
+# Settings.scraperTreshold=Score threshold
+# Settings.scraperTreshold.hint=This is an indicator of how similar the search query and the results are.\r\nThe automatic scraper will ignore search result scores below the threshold.\r\nBE AWARE\: setting the threshold too low will result in false positives\!\r\n\r\n1 \= 100% the same\r\n0.75 \= default\r\n0 \= they are completely different
 Settings.default.autoscrape=buscar imagens automaticamente (sem seleção)
+# Settings.automaticscraper=Automatic scraper
 
 # movie settings
 Settings.movie.datasource=Fontes
 Settings.movie.datasource.remove.info=Se você remover %s da sua origem de dados, todos os filmes neste caminho também serão removidos. Continuar?
+# Settings.movie.visiblecolumns=Visible columns
 
 Settings.datasource.folderchooser=Adicionar fonte
 Settings.datasource.remove=Remover fonte de dados
@@ -244,6 +270,8 @@ Settings.sorting.info=Escolher prefixos, que vão afetar a ordenação das lista
 Settings.renamer=Renomeador
 Settings.renamer.folder=Nome diretório
 Settings.renamer.file=Nome arquivo
+# Settings.renamer.asciireplacement=Replace non ASCII characters with their basic ASCII equivalents
+# Settings.renamer.asciireplacement.hint=Examples\: Ä \=> Ae; Ö \=> Oe; ß \=> ss; Á \= > A; Æ \=> Ae; ...
 Settings.cleanupoptions=Opções de limpeza
 Settings.renamer.removenfo=remover todos NFOs
 Settings.renamer.moviesetsinglemovie=Criar coleção para coleções com um único filme
@@ -252,8 +280,11 @@ Settings.imagecacheimport=Criar cache de imagem na importação
 Settings.imagecacheimporthint=Atenção\: isto pode demorar. Funciona somente se o cache de imagem estiver habilitado
 Settings.devicename=Nome do dispositivo
 Settings.macaddress=MAC address
+# Settings.movie.badwords=Bad words
+# Settings.movie.badwords.hint=Bad words, which will be removed from\r\nthe detected movie name
+# Settings.runtimefrommediafile=Prefer runtime from MediaInfo
 
-Settings.movie.renamer.info=Padrões disponíveis\:\n$T \= Título\n$O \= Título Original\n$1 \= primeira letra do título\n$E \= título da listagem\n$2 \= primeira letra do título da listagem\n$Y \= Ano\n$M \= Título da coleção (título da listagem)\n$N \= Título da coleção\n$I \= Número IMDB\n$C \= Certificação\n$R \= Resolução\n$A \= codec de áudio + canais\n$V \= codec de vídeo + formato\n$F \= formato de vídeo
+# Settings.movie.renamer.info=Available pattern\:\r\n$T \= Title\r\n$O \= OriginalTitle\r\n$1 \= first letter of the title\r\n$E \= Sort title\r\n$2 \= first letter of sort title\r\n$Y \= Year\r\n$M \= Movieset title (sort title)\r\n$N \= Movieset title\r\n$I \= IMDB number\r\n$C \= Certification\r\n$R \= Video resolution\r\n$A \= audio code + channels\r\n$V \= video code + format\r\n$F \= video format\r\n\r\n{} \= optional replacement\r\n eg\: {Year $Y} -> "Year 2013" if $Y is not empty\r\n if $Y is empty (or no $x replacement inside)\r\n the complete tag is empty
 Settings.movie.renamer.example=Escolha um arquivo e padrão p/ renomear\nSe o campo estiver em branco, não serão renomeados
 Settings.movie.renamer.nomovie=pelo menos um filme é necessário como exemplo
 Settings.movie.renamer.spacesubstitution=Substituir espaços por
@@ -270,6 +301,7 @@ Settings.tvshowtofilename=adicionar Programa ao nome
 Settings.tvshowepisodetofilename=adicionar episódio ao nome
 Settings.tvshowseasonfoldername=nome diretório temporada
 Settings.tvshowseasonhint=$1 - Número da temporada\n$2 - Número da temporada com 2 dígitos
+# Settings.separator=Separator
 
 # tv shows
 tvshow.scrape.newitems=Buscar novos itens
@@ -307,6 +339,8 @@ metatag.cast=Elenco
 metatag.certification=Certificação
 metatag.codec=Codec
 metatag.country=País
+# metatag.crew=Crew
+# metatag.datasource=Datasource
 metatag.dateadded=Adicionado em
 metatag.details=Detalhes
 metatag.details2=Detalhes 2
@@ -332,6 +366,7 @@ metatag.originaltitle=Título Original
 metatag.path=Caminho
 metatag.plot=Sinopse
 metatag.production=Produção
+# metatag.producers=Producers
 metatag.premiered=Premiado
 metatag.quality=Qualidade
 metatag.rating=Classificação
@@ -354,6 +389,7 @@ metatag.tagline=Chamada
 metatag.tags=Etiquetas
 metatag.title=Título
 metatag.tmdb=TMDB Id
+# metatag.top250=Top 250
 metatag.tvdb=TheTvDB Id
 metatag.tvshow=Programa de TV
 metatag.tvshows=Programas de TV
@@ -370,6 +406,7 @@ metatag.trailer=Trailer
 
 mediafiletype.unknown=Desconhecido
 mediafiletype.video=Vídeo
+# mediafiletype.video_extra=Video Extras
 mediafiletype.audio=Áudio
 mediafiletype.subtitle=Legenda
 mediafiletype.nfo=NFO
@@ -382,6 +419,8 @@ mediafiletype.extrafanart=Fanart extra
 mediafiletype.graphic=Gráfico
 mediafiletype.movie=Filme
 mediafiletype.episode=Episódio
+# mediafiletype.season_poster=Season poster
+# mediafiletype.sample=Sample
 
 chooser.nothingfound=nada encontrado
 chooser.scrapeing=buscando\:
@@ -393,6 +432,7 @@ moviechooser.search=Procurar filme
 tvshowchooser.search=Procurar Programa de TV
 tvshowepisodechooser.search=Procurar episódio
 
+# movieextendedsearch.filter=Filter
 movieextendedsearch.options=Filtros e opções avançadas de lista
 movieextendedsearch.filterby=filtrar por
 movieextendedsearch.duplicates=Mostrar duplicados
@@ -402,6 +442,11 @@ movieextendedsearch.cast=Membro do elenco
 movieextendedsearch.tag=Etiqueta
 movieextendedsearch.movieset=Filmes em coleção
 movieextendedsearch.sortby=organizar por
+# movieextendedsearch.missingmetadata=Missing metadata
+# movieextendedsearch.missingartwork=Missing artwork
+# movieextendedsearch.missingsubtitles=Missing subtitles
+# movieextendedsearch.newmovies=New movies
+# movieextendedsearch.newepisodes=New episodes
 
 logwindow.title=Log de Erros
 summarywindow.title=Resumo
