--- a/locale/messages_vi.properties
+++ b/locale/messages_vi.properties
@@ -46,6 +46,16 @@ tmm.donate=Ủng hộ
 tmm.searchfield=Tìm kiếm...
 # tmm.errorlogs=Show error log
 # tmm.wakeonlandevice=Wake on LAN device
+# tmm.wakeonlan=Wake on LAN
+# tmm.version=Version
+# tmm.builddate=Build date
+# tmm.homepage=Homepage
+# tmm.thanksto=Thanks to
+# tmm.of=of
+# tmm.nfo=NFO
+# tmm.images=Images
+# tmm.trailer=Trailer
+# tmm.subtitles=Subtitles
 
 status.activethreads=các tiến trình đang hoạt động
 # status.queuesize=Queue\:
@@ -84,13 +94,18 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 
 # movie.edit=Edit movie
 # movie.edit.abortqueue.desc=Abort editing all selected movies
+# movie.edit.moveactorup=Move selected actor up
+# movie.edit.moveactordown=Move selected actor down
+# movie.edit.moveproducerup=Move selected producer up
+# movie.edit.moveproducerdown=Move selected producer down
+
 
 # movie.inmovieset=Movies in a movieset
 # movie.notinmovieset=Movies not in a movieset
 # movie.change=Change movie
 
 # movieset.add.desc=Add a movie set
-# movieset.remove.desc=Remove selected movie set
+# movieset.remove.desc=Remove selected movie set(s)
 # movieset.title=Movieset title\:
 # movieset.search=Search TMDB for movieset metadata
 # movieset.tmdb.find=Find TmdbId
@@ -106,9 +121,11 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # movieset.save.desc=Save movie set metadata
 
 # cast.actor.add=Add a new Actor
-# cast.actor.remove=Remove Actor
+# cast.actor.remove=Remove selected Actor
 # cast.actor.unknown=unknown actor
 # cast.role.unknown=unknown role
+# cast.producer.add=Add a new Producer
+# cast.producer.remove=Remove selected Producer
 
 # scraper=Scraper
 # scraper.metadata.select=Select metadata to be scraped
@@ -202,6 +219,7 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 
 # image settings
 # Settings.poster=Poster and Fanart
+# Settings.images=<html><center>Movies -<br>Images</center></html>
 # Settings.source=Source
 # Settings.fanarttv.alert=Attention\: Fanart.tv does not provide poster
 # Settings.moviefilename=<movie filename>
@@ -218,16 +236,24 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # Settings.movieset.foldername=Folder name
 # Settings.movieset.buttonselect=Select folder
 # Settings.movieset.folderchooser=select movieset artwork folder
+# Settings.image.small=Small
+# Settings.image.medium=Medium
+# Settings.image.big=Big
+# Settings.image.large=Large
 
 # scraper settings
 # Settings.getfromTMDB=Plot/Title/Tagline from TMDB
 # Settings.preferredLanguage=Preferred language
 # Settings.certificationCountry=Certification country
+# Settings.scraperTreshold=Score threshold
+# Settings.scraperTreshold.hint=This is an indicator of how similar the search query and the results are.\r\nThe automatic scraper will ignore search result scores below the threshold.\r\nBE AWARE\: setting the threshold too low will result in false positives\!\r\n\r\n1 \= 100% the same\r\n0.75 \= default\r\n0 \= they are completely different
 # Settings.default.autoscrape=automatically scrape images (without selection)
+# Settings.automaticscraper=Automatic scraper
 
 # movie settings
 # Settings.movie.datasource=Datasources
 # Settings.movie.datasource.remove.info=If you remove %s from your datasources, all movies inside this path will be removed from the database. Continue?
+# Settings.movie.visiblecolumns=Visible columns
 
 # Settings.datasource.folderchooser=Add datasource
 # Settings.datasource.remove=Remove datasource
@@ -244,6 +270,8 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # Settings.renamer=Renamer
 # Settings.renamer.folder=Folder name
 # Settings.renamer.file=File name
+# Settings.renamer.asciireplacement=Replace non ASCII characters with their basic ASCII equivalents
+# Settings.renamer.asciireplacement.hint=Examples\: Ä \=> Ae; Ö \=> Oe; ß \=> ss; Á \= > A; Æ \=> Ae; ...
 # Settings.cleanupoptions=Cleanup options
 # Settings.renamer.removenfo=remove all other NFOs
 # Settings.renamer.moviesetsinglemovie=Also create movieset folder for moviesets with only one movie
@@ -252,8 +280,11 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # Settings.imagecacheimporthint=Attention\: this may take a while. Works only if the image cache is enabled
 # Settings.devicename=Device name
 # Settings.macaddress=MAC address
+# Settings.movie.badwords=Bad words
+# Settings.movie.badwords.hint=Bad words, which will be removed from\r\nthe detected movie name
+# Settings.runtimefrommediafile=Prefer runtime from MediaInfo
 
-# Settings.movie.renamer.info=Available pattern\:\r\n$T \= Title\r\n$O \= OriginalTitle\r\n$1 \= first letter of the title\r\n$E \= Sort title\r\n$2 \= first letter of sort title\r\n$Y \= Year\r\n$M \= Movieset title (sort title)\r\n$N \= Movieset title\r\n$I \= IMDB number\r\n$C \= Certification\r\n$R \= Video resolution\r\n$A \= audio code + channels\r\n$V \= video code + format\r\n$F \= video format
+# Settings.movie.renamer.info=Available pattern\:\r\n$T \= Title\r\n$O \= OriginalTitle\r\n$1 \= first letter of the title\r\n$E \= Sort title\r\n$2 \= first letter of sort title\r\n$Y \= Year\r\n$M \= Movieset title (sort title)\r\n$N \= Movieset title\r\n$I \= IMDB number\r\n$C \= Certification\r\n$R \= Video resolution\r\n$A \= audio code + channels\r\n$V \= video code + format\r\n$F \= video format\r\n\r\n{} \= optional replacement\r\n eg\: {Year $Y} -> "Year 2013" if $Y is not empty\r\n if $Y is empty (or no $x replacement inside)\r\n the complete tag is empty
 # Settings.movie.renamer.example=Choose a folder and file renaming pattern.\nIf fields are empty, the renaming will be skipped\!
 # Settings.movie.renamer.nomovie=at least one movie is needed for the example
 # Settings.movie.renamer.spacesubstitution=Replace spaces with
@@ -270,6 +301,7 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # Settings.tvshowepisodetofilename=add episode title to filename
 # Settings.tvshowseasonfoldername=season folder name
 # Settings.tvshowseasonhint=$1 - Season number\n$2 - Season number with at least 2 digits
+# Settings.separator=Separator
 
 # tv shows
 # tvshow.scrape.newitems=Scrape new items
@@ -307,6 +339,8 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # metatag.certification=Certification
 # metatag.codec=Codec
 # metatag.country=Country
+# metatag.crew=Crew
+# metatag.datasource=Datasource
 # metatag.dateadded=Date Added
 # metatag.details=Details
 # metatag.details2=Details 2
@@ -332,6 +366,7 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # metatag.path=Path
 # metatag.plot=Plot
 # metatag.production=Production
+# metatag.producers=Producers
 # metatag.premiered=Premiered
 # metatag.quality=Quality
 # metatag.rating=Rating
@@ -354,6 +389,7 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # metatag.tags=Tags
 # metatag.title=Title
 # metatag.tmdb=TMDB Id
+# metatag.top250=Top 250
 # metatag.tvdb=TheTvDB Id
 # metatag.tvshow=TV show
 # metatag.tvshows=TV shows
@@ -370,6 +406,7 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 
 # mediafiletype.unknown=Unknown
 # mediafiletype.video=Video
+# mediafiletype.video_extra=Video Extras
 # mediafiletype.audio=Audio
 # mediafiletype.subtitle=Subtitle
 # mediafiletype.nfo=NFO
@@ -382,6 +419,8 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # mediafiletype.graphic=Graphic
 # mediafiletype.movie=Movie
 # mediafiletype.episode=Episode
+# mediafiletype.season_poster=Season poster
+# mediafiletype.sample=Sample
 
 # chooser.nothingfound=nothing found
 # chooser.scrapeing=scraping\:
@@ -393,6 +432,7 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # tvshowchooser.search=Search TV show
 # tvshowepisodechooser.search=Search episode
 
+# movieextendedsearch.filter=Filter
 # movieextendedsearch.options=Extended filter and sort options
 # movieextendedsearch.filterby=filter by
 # movieextendedsearch.duplicates=Show duplicates
@@ -402,6 +442,11 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # movieextendedsearch.tag=Tag
 # movieextendedsearch.movieset=Movies in movieset
 # movieextendedsearch.sortby=sort by
+# movieextendedsearch.missingmetadata=Missing metadata
+# movieextendedsearch.missingartwork=Missing artwork
+# movieextendedsearch.missingsubtitles=Missing subtitles
+# movieextendedsearch.newmovies=New movies
+# movieextendedsearch.newepisodes=New episodes
 
 # logwindow.title=Error logs
 # summarywindow.title=Summary
