added a what's new dialog displaying the changelog

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -450,6 +450,8 @@ movieextendedsearch.newepisodes=New episodes
 
 logwindow.title=Error logs
 summarywindow.title=Summary
+whatsnew.title=What's new
+whatsnew.hint=For more information visit
 
 message.nfo.writeerror=Writing NFO failed{} {}
 message.nfo.readerror=Parsing NFO failed
