--- a/src/messages.properties
+++ b/src/messages.properties
@@ -126,6 +126,8 @@ cast.actor.unknown=unknown actor
 cast.role.unknown=unknown role
 cast.producer.add=Add a new Producer
 cast.producer.remove=Remove selected Producer
+producer.name.unknown=unknown producer
+producer.role.unknown=unknown role
 
 scraper=Scraper
 scraper.metadata.select=Select metadata to be scraped
