--- a/src/messages.properties
+++ b/src/messages.properties
@@ -324,6 +324,8 @@ tvshow.rewritenfo=Rewrite NFO for selected TV show(s)
 tvshow.rename=Rename/cleanup selected TV show(s)/episode(s)
 tvshow.clearimagecache=Clear image cache for selected TV show(s)/episode(s)
 tvshow.renamer.failedrename=Failed to rename episode {} - invalid season and/or episode number
+tvshow.renamer.tvshowfolder=Rename TV show folder
+tvshow.renamer.tvshowfolder.year=Add year to the TV show folder
 
 tvshowepisode.scrape=Scrape episode metadata
 tvshowepisode.clone=Clone episode
